--- a/remap1.19/build.gradle
+++ b/remap1.19/build.gradle
@@ -27,11 +27,11 @@ repositories {
 }
 
 remapJar {
-    nestedJars.from file("../build/devlibs/${rootProject.archives_base_name}-${rootProject.mod_version}-dev.jar")
+    nestedJars.from rootProject
 }
 
 afterEvaluate {
-    compileJava.dependsOn(rootProject.buildVoxelLib)
+//    compileJava.dependsOn(rootProject.buildVoxelLib)
 }
 
 dependencies {
@@ -41,7 +41,8 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Voxel Latest
-    modImplementation files("../build/devlibs/${rootProject.archives_base_name}-${rootProject.mod_version}-dev.jar")
+//    modImplementation files("../build/devlibs/${rootProject.archives_base_name}-${rootProject.mod_version}-dev.jar")
+    implementation rootProject
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     // modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
