--- a/remap1.18.1/build.gradle
+++ b/remap1.18.1/build.gradle
@@ -31,7 +31,7 @@ remapJar {
 }
 
 afterEvaluate {
-//	compileJava.dependsOn(rootProject.buildVoxelLib)
+	rootProject.prepareRemapJar.dependsOn.clear()
 }
 
 dependencies {
@@ -41,11 +41,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Voxel Latest
-//	modImplementation files("../build/devlibs/${rootProject.archives_base_name}-${rootProject.mod_version}-dev.jar")
 	implementation rootProject
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	// modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
 processResources {
