--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
-import java.util.function.BiFunction
-
 plugins {
-	id 'fabric-loom' version '0.12-SNAPSHOT'
-	id 'maven-publish'
+    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'maven-publish'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -13,78 +11,99 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+    // Add repositories to retrieve artifacts from in here.
+    // You should only use this when depending on other mods because
+    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
+    // for more information about repositories.
 
-	maven {
-		url "https://cursemaven.com"
-	}
-	maven {
-		url 'https://www.jitpack.io'
-	}
+    maven {
+        url "https://cursemaven.com"
+    }
+    maven {
+        url 'https://www.jitpack.io'
+    }
 }
 
 remapJar {
 }
 
-dependencies {
-	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}",{
-		transitive = false;
-	}
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2",{
-		transitive = false;
-	}
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}",{
-		transitive = false;
-	}
+task copyRemapperBuildResult {
+    dependsOn build
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	// modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    for (Project subProject : subprojects) {
+        File sourceFile = new File(subProject.buildDir, "libs/${subProject.archives_base_name}-${subProject.mod_version}.jar")
+        File targetFile = new File(project.rootDir, "release/${project.archives_base_name}-${subProject.mod_version}-${subProject.minecraft_version}.jar")
+
+        if (sourceFile.exists()) {
+            if (!targetFile.delete()) {
+                throw new SecurityException("Failed to delete file ${targetFile.getAbsolutePath()}.")
+            }
+            try (
+                    FileInputStream fileInputStream = new FileInputStream(sourceFile)
+                    FileOutputStream fileOutputStream = new FileOutputStream(targetFile)
+            ) {
+                fileInputStream.transferTo(fileOutputStream)
+            }
+        }
+    }
+}
+
+dependencies {
+    // To change the versions see the gradle.properties file
+    minecraft "com.mojang:minecraft:${project.minecraft_version}", {
+        transitive = false;
+    }
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2", {
+        transitive = false;
+    }
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}", {
+        transitive = false;
+    }
+
+    // Fabric API. This is technically optional, but you probably want it anyway.
+    // modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
 processResources {
-	inputs.property "version", project.version
+    inputs.property "version", project.version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
+    // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
+    it.options.release = 17
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
-	withSourcesJar()
+    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+    // if it is present.
+    // If you remove this line, sources will not be generated.
+    withSourcesJar()
 }
 
 jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
-	}
+    from("LICENSE") {
+        rename { "${it}_${project.archivesBaseName}" }
+    }
 }
 
 // configure the maven publication
 publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			from components.java
-		}
-	}
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
-	}
+    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+    repositories {
+        // Add repositories to publish to here.
+        // Notice: This block does NOT have the same function as the block in the top level.
+        // The repositories here will be used for publishing your artifact, not for
+        // retrieving dependencies.
+    }
 }
