--- a/template/build.gradle
+++ b/template/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.api.internal.tasks.DefaultTaskInputs
-
 plugins {
     id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'maven-publish'
@@ -11,7 +9,6 @@ targetCompatibility = JavaVersion.VERSION_17
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
-String voxelLatest = "net_fabricmc_yarn_" + rootProject.minecraft_version.replace(".", "_") + "_" + rootProject.yarn_mappings.replace(".", "_").replace("+", "_") + "_v2.net.burningtnt:voxelLatest:" + rootProject.mod_version
 
 repositories {
     // Add repositories to retrieve artifacts from in here.
@@ -45,14 +42,16 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Voxel Latest
-    implementation rootProject
+    implementation rootProject, {
+        transitive = false
+    }
 }
 
 processResources {
     inputs.property "version", project.version
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": project.version,"voxelLatestVersion": rootProject.mod_version,"minecraftVersion": project.minecraft_version
     }
 }
 
