--- a/template/build.gradle
+++ b/template/build.gradle
@@ -1,3 +1,6 @@
+import net.fabricmc.loom.LoomGradleExtension
+import net.fabricmc.loom.configuration.ide.RunConfigSettings
+
 plugins {
     id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'maven-publish'
@@ -26,13 +29,44 @@ repositories {
 }
 
 remapJar {
-    dependsOn rootProject.remapJar
     dependsOn rootProject.jar
     nestedJars.from file("../build/libs/${rootProject.archives_base_name}-${rootProject.mod_version}.jar")
 }
 
 afterEvaluate {
-    rootProject.prepareRemapJar.dependsOn.clear()
+    NamedDomainObjectContainer<RunConfigSettings> runConfigSettingsList = ((LoomGradleExtension) extensions.getByName("loom")).getRunConfigs()
+    runConfigSettingsList.create "Minecraft Client", {
+        it.name = "Minecraft Client"
+        it.vmArgs.add "-Dmixin.debug.export=true"
+        it.environment = "client"
+        it.defaultMainClass = "net.fabricmc.devlaunchinjector.Main"
+        it.ideConfigGenerated = true
+    }
+}
+
+ideaSyncTask {
+    doLast {
+        File runConfigurationFile = new File(rootProject.getProjectDir(), ".idea/runConfigurations/Minecraft_Client___${project.name.replace(".", "_")}__${project.name}.xml")
+        try {
+            Node document = new XmlParser().parse(runConfigurationFile)
+            document.findAll {
+                it.name() == "configuration"
+            }.each {
+                it.findAll {
+                    it.name() == "module"
+                }.each {
+                    if (!it.attributes().get("name").startsWith(rootProject.maven_group)) {
+                        it.attributes().put("name", "${rootProject.maven_group}.${it.attributes().get("name")}")
+                    }
+                }
+            }
+            new PrintWriter(new FileWriter(runConfigurationFile)).withCloseable {
+                new XmlNodePrinter(it).print(document)
+            }
+        } catch (Throwable e) {
+            throw new RuntimeException(e)
+        }
+    }
 }
 
 dependencies {
