--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,10 @@ afterEvaluate {
 }
 
 task buildAll {
-    dependsOn build
+    for (Project subProject : subprojects) {
+        dependsOn ":${subProject.name}:build"
+    }
+    dependsOn "build"
 
     for (Project subProject : subprojects) {
         File sourceFile = new File(subProject.buildDir, "libs/${subProject.archives_base_name}-${subProject.mod_version}.jar")
@@ -122,7 +125,7 @@ dependencies {
     }
 
     // Fabric API. This is technically optional, but you probably want it anyway.
-    // modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
 processResources {
